[gd_scene load_steps=4 format=3 uid="uid://u6equn2extll"]

[ext_resource type="Script" path="res://lavaball.gd" id="1_a2ond"]
[ext_resource type="Texture2D" uid="uid://bpyos3obfe87w" path="res://Textures/balllava.png" id="2_tu1vn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8u2e6"]
radius = 15.0

[node name="lavaball" type="Area2D"]
script = ExtResource("1_a2ond")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8u2e6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_tu1vn")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
